cluster/apps/media/radarr/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name radarr
  labels:
    app.kubernetes.io/name: *name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`movie.${SECRET_DOMAIN}`)
      middlewares:
        - name: secure-headers
          namespace: traefik-system
        - name: authelia
          namespace: authentication-system
      services:
        - name: *name
          port: 7878
          namespace: media
  tls:
    secretName: ${SECRET_DOMAIN/./-}-tls
